# densereviewer

./: .gitignore  .prettierrc  README.md  docker-compose-gpu.yml  docker-compose.yml
backend/: dockerfile  dockerfile-gpu  entrypoint.sh  pyproject.toml
backend/src/: .env.example  manage.py  rabbitmq.conf  ws.py
backend/src/account/: models.py  serailizers.py
backend/src/account/migrations/: 0001_initial.py
backend/src/app_utils/: error.py  re_ranking.py  tasks.py
backend/src/app_utils/core/: api_routing.py  api_use.ipynb  corpus4tevatron.jsonl  demo.ris  dense_ranker.py  dense_reviewer_env.yaml  included_studies.ris  pico.json  pmids.json  pyserini_index.py  query.json  ranking_pages.json  ranking_pages_feedback.json  rf_rocchio.py  tevatron_pipe.py
backend/src/authentication/: urls.py  utils.py  views.py
backend/src/dense_review/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/src/encoder/: models.py  serializers.py  urls.py  utils.py  views.py
backend/src/encoder/migrations/: 0001_initial.py  0002_corpus_corpus4tevatron_corpus_docid2pmid_and_more.py  0003_alter_corpus_status.py  0004_alter_review_archived_at_alter_review_c_query_path_and_more.py  0005_alter_corpus_corpus_first_entry_and_more.py  0006_rename_c_query_path_review_pico_query_and_more.py  0007_review_screening_status.py  0008_alter_corpus_pmids.py  0009_review_show_docs_per_page.py  0010_review_user_interaction.py  0011_remove_review_macro_status_review_index_status.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: demo.ris
frontend/src/: App.vue  main.ts  router.ts
frontend/src/assets/: style.css
frontend/src/components/: Container.vue  CustomButton.vue  CustomIconButton.vue  Inputbox.vue  LoadingScreen.vue  Modal.vue  ScrollTop.vue  Uploader.vue
frontend/src/composables/: dirty.ts  error.ts  loading.ts  scroll.ts  toast.ts
frontend/src/defaults/: auth.ts  corpus.ts  dataset.ts  statistic.ts
nginx_conf.d/: default.conf  dense-review.conf
(+41 files in other folders)
